2010-04-20  Jiahao Chen <jiahao@mit.edu>

        * src/charges/qeq.h, src/charges/qeq.cpp:
	Added implementation of QEq charge model (Rappe and Goddard, 1991) 

        * src/charges/qtpie.h, src/charges/qtpie.cpp:
	Added implementation of QTPIE charge model (Chen and Martinez, 2007;
	2008)

        * src/atom.cpp: added comments to show how these new charge models can
	be called from within current OpenBabel code
		
        * CMakeLists.txt: added charge models and compile flags for Eigen2
	library (variables copied from Avogadro source tree)
        
	* cmake/modules/FindEigen2.cmake: CMake module to configure Eigen2
	(copied from Avogadro source tree)

2010-04-20  Noel O'Boyle

	* scripts/CMakeLists.txt: Handle local and global Python installs
	in a (to me) sensible way

2010-04-20  Chris Morley

	* src/ops/loader.cpp: parse of plugindefines.txt  to allow # as
	a comment and # in a SMARTS string to coexist.
	
	* data/plugindefines.txt: add some simple SmartsDescriptors.
	
2010-04-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/generic.h: Remove dangerous loop iterator
	after calling erase(), found by cppcheck.

	* include/openbabel/depict/painter.h: Add virtual destructor to
	remove warning.

	* src/formats/xtcformat.cpp: Remove minor memory leak found by
	cppcheck.

	* src/formats/fastsearchformat.cpp: Remove minor memory leak found
	by cppcheck.

	* src/ops/sort.cpp: Remove minor compile warning by GCC.

	* data/element.h, data/atomtyp.h: Regenerate. Need to add CMake
	targets for these.

2010-04-10  Chris Morley

	* CMakeLists.txt: ensure output compression not enabled for MSVC
	(as for previous build system).

	* src/CMakeLists.txt: remove ops.cpp (which had nothing useful left
	in it) and add xout.cpp. Add plugin_charges obf project for MSVC.
	
	* windows-vc2008/Distribution/NSISScriptToCreateInstaller.nsi:
	add doc folder; delete MS distributables installer when it has been