@@ -1,3 +1,8 @@
+2010-04-21  Noel O'Boyle
+
+	* scripts/CMakeLists.txt: Edit variables to correspond to Konstantin's
+	recent changes (something to do with a superpackage build..?)
+
 2010-04-20  Jiahao Chen <jiahao@mit.edu>
 
         * src/charges/qeq.h, src/charges/qeq.cpp:
